Fix gaps in flexbox
Added "align-content: center;" in div.container to remove gap between rows

--- a/design/autore/centro/style/centro.css
+++ b/design/autore/centro/style/centro.css
@@ -25,6 +25,7 @@ div.container {
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
+    align-content: center;
     /*Da rimuovere*/
     width: 100%;
     height:100vh;
